@@ -8,6 +8,7 @@ import org.jooq.DSLContext;
 import org.jooq.Field;
 import org.jooq.Table;
 import org.jooq.impl.DSL;
+import org.texttechnologylab.udav.database.DBConstants;
 import org.texttechnologylab.udav.generators.*;
 import org.texttechnologylab.udav.generators.common_properties.CommonProperties;
 import org.texttechnologylab.udav.generators.settings.GeneratorSettings;
@@ -39,7 +40,8 @@ public class Pipeline {
         this.rootJSONView = rootJSONView;
         this.generators = generators;
         this.baseGenerators = baseGenerators;
-        this.visualizedGenerators = findGeneratorsUsedByVisualizations();
+        // Persist/build every declared generator, not only widget-referenced ones.
+        this.visualizedGenerators = new LinkedHashMap<>(generators);
         this.dbAccess = dbAccess;
 
         currentState = PipelineState.CREATED_GENERATORS;
@@ -85,7 +87,7 @@ public class Pipeline {
         } catch (IllegalArgumentException e) {
             throw e;
         } catch (Exception e) {
-            throw new IllegalArgumentException("Invalid pipeline JSON.");
+            throw new IllegalArgumentException("Invalid pipeline JSON: " + e.getMessage(), e);
         }
     }
 
@@ -97,17 +99,27 @@ public class Pipeline {
      * (B) { ...the pipeline... }   // single object without the "pipelines" wrapper
      */
     public static Pipeline fromDB(DBAccess dbAccess, String pipelineId) {
-        if (dbAccess.getDataSource() == null) throw new IllegalArgumentException("dataSource must not be null");
+        return fromDB(dbAccess, dbAccess, pipelineId);
+    }
+
+    /**
+     * Load a pipeline row from {@code readAccess}'s schema, but build all generators
+     * (and write their data) using {@code writeAccess}'s schema.
+     * Use this when the pipeline table lives in a shared schema (app.db.schema) but each
+     * pipeline's generator data lives in its own schema (the pipeline id).
+     */
+    public static Pipeline fromDB(DBAccess readAccess, DBAccess writeAccess, String pipelineId) {
+        if (readAccess.getDataSource() == null) throw new IllegalArgumentException("dataSource must not be null");
         if (pipelineId == null || pipelineId.isBlank()) throw new IllegalArgumentException("pipelineId must not be null/blank");
 
         final String json;
-        try (Connection c = dbAccess.getDataSource().getConnection()) {
+        try (Connection c = readAccess.getDataSource().getConnection()) {
             DSLContext dsl = DSL.using(c);
 
-            // qualify everything with public
-            Table<?> T = DSL.table(DSL.name("public", "pipeline"));
-            Field<String> F_JSON = DSL.field(DSL.name("public", "pipeline", "json"), String.class);
-            Field<String> F_ID = DSL.field(DSL.name("public", "pipeline", "pipeline_id"), String.class);
+            String pipelineSchema = readAccess.getSchema();
+            Table<?> T = DSL.table(DSL.name(pipelineSchema, "pipeline"));
+            Field<String> F_JSON = DSL.field(DSL.name(pipelineSchema, "pipeline", "json"), String.class);
+            Field<String> F_ID = DSL.field(DSL.name(pipelineSchema, "pipeline", "pipeline_id"), String.class);
 
             String val = dsl.select(F_JSON)
                     .from(T)
@@ -128,7 +140,7 @@ public class Pipeline {
 
             // Accept both a single object or a { "pipelines": [...] } envelope
             Map<String, Object> root;
-            Object parsed = mapper.readValue(json, new TypeReference<Object>() {
+            Object parsed = mapper.readValue(json, new TypeReference<>() {
             });
             if (parsed instanceof Map<?, ?> m) {
                 //noinspection unchecked
@@ -154,13 +166,13 @@ public class Pipeline {
                 throw new IllegalArgumentException("Invalid pipeline JSON: " + append);
             }
 
-            Object first = pipelines.get(0);
+            Object first = pipelines.getFirst();
             if (!(first instanceof Map<?, ?> pipelineMap)) {
                 throw new IllegalArgumentException("Invalid pipeline JSON: pipeline entry is not an object.");
             }
 
             JSONView view = new JSONView(pipelineMap);
-            Pipeline pipeline = generatePipelineFromJSONView(view, dbAccess);
+            Pipeline pipeline = generatePipelineFromJSONView(view, writeAccess);
 
             // Sanity check: if the DB row was envelope-form with a different id, warn but continue
             String loadedId = pipeline.getId();
@@ -178,7 +190,9 @@ public class Pipeline {
 
     public static Pipeline generatePipelineFromJSONView(JSONView pipelineView, DBAccess dbAccess) {
         try {
-            pipelineView = new JSONView(mergeGeneratorsIntoSources(pipelineView.asMap()));
+            Map<String, Object> merged = mergeGeneratorsIntoSources(pipelineView.asMap());
+            Map<String, Object> expanded = expandNTemplates(merged, dbAccess);
+            pipelineView = new JSONView(expanded);
 
             String id = getJSONViewString(pipelineView, "id");
             JSONView sourcesView = pipelineView.get("sources");
@@ -195,11 +209,21 @@ public class Pipeline {
                 for (JSONView sourcesEntry : sourcesView) {
                     String sourceID = getJSONViewString(sourcesEntry, "id");
                     String sourceDefinition = getJSONViewOptionalString(sourcesEntry, "uri"); // TODO: Use better key name as this could also be a non uri source
-                    if (sourceDefinition != null && sourceDefinition.contains("@")) continue; // TODO: Remove
                     Source sourceObj = (sourceDefinition == null)? null : decideSourceFromJSONDefinition(sourceDefinition, dbAccess);
 
                     GeneratorSettings settingsBundle = GeneratorSettings.fromConfig(sourcesEntry);
                     JSONView generatorsView = sourcesEntry.get("createsGenerators");
+                    boolean requiresSubSources = false;
+                    for (JSONView generatorEntry : generatorsView) {
+                        if (getJSONViewOptionalString(generatorEntry, "__udavSubSourceId") != null) {
+                            requiresSubSources = true;
+                            break;
+                        }
+                    }
+                    if (requiresSubSources && sourceObj != null && !(sourceObj instanceof SourceN)
+                            && isDbJsonBackedSource(stripNSuffix(sourceDefinition))) {
+                        sourceObj = new SourceJsonN(stripNSuffix(sourceDefinition), dbAccess);
+                    }
 
                     generatorsLoop:
                     for (JSONView generatorEntry : generatorsView) {
@@ -228,6 +252,19 @@ public class Pipeline {
 
                         Generator generator = Generator.constructGenerator(generatorID, generatorType, generatorEntry, sourcesEntry, settingsBundle, dbAccess);
 
+                        Source generatorSourceObj = sourceObj;
+                        String subSourceId = getJSONViewOptionalString(generatorEntry, "__udavSubSourceId");
+                        if (subSourceId != null) {
+                            if (!(sourceObj instanceof SourceN sourceN)) {
+                                throw new IllegalArgumentException("Error for generator \"" + generatorID + "\": source does not support grouped expansion.");
+                            }
+                            Source resolvedSubSource = sourceN.getSubSourcesIdToObjectMap().get(subSourceId);
+                            if (resolvedSubSource == null) {
+                                throw new IllegalArgumentException("Error for generator \"" + generatorID + "\": sub-source \"" + subSourceId + "\" not found.");
+                            }
+                            generatorSourceObj = resolvedSubSource;
+                        }
+
                         if (extendsGenerators == null) {
                             GeneratorSettings combinedSettings = generator.getSettings();
                             if (!combinedSettings.getBooleanSettingOrDefault("ignoreCombiCommonProperties", false)) {
@@ -243,8 +280,8 @@ public class Pipeline {
                         }
 
                         if (generator.getSource() == null) {
-                            if (sourceObj == null) throw new IllegalArgumentException("Error for generator \"" + generatorID + "\": Non-derived generators need a source, which is not defined in group with id \"" + sourceID + "\".");
-                            generator.setSource(sourceObj);
+                            if (generatorSourceObj == null) throw new IllegalArgumentException("Error for generator \"" + generatorID + "\": Non-derived generators need a source, which is not defined in group with id \"" + sourceID + "\".");
+                            generator.setSource(generatorSourceObj);
                         }
 
                         generators.put(generatorID, generator);
@@ -289,7 +326,7 @@ public class Pipeline {
         } catch (IllegalArgumentException e) {
             throw e;
         } catch (Exception e) {
-            throw new IllegalArgumentException("Invalid pipeline JSON.");
+            throw new IllegalArgumentException("Invalid pipeline JSON: " + e.getMessage(), e);
         }
     }
 
@@ -305,8 +342,62 @@ public class Pipeline {
 
     public void saveGeneratorsToDB() throws SQLException {
         if (currentState != PipelineState.SETUP_GENERATORS) throw new IllegalStateException("Pipeline not in correct state for saving generators to database.");
-        for (Generator g : visualizedGenerators.values()) g.writeToDB();
+
+        ensureGeneratorTypeTableExists();
+
+        for (Generator g : visualizedGenerators.values()) {
+            try {
+                g.writeToDB();
+                replaceGeneratorTypeRow(g.getId(), g.getClass().getSimpleName());
+            } catch (SQLException e) {
+                throw new SQLException(
+                        "Failed to persist generator \"" + g.getId() + "\" ("
+                                + g.getClass().getName() + ") to database.",
+                        e
+                );
+            }
+        }
+
         currentState = PipelineState.SAVED_GENERATORS_TO_DB;
+    }
+
+    private void ensureGeneratorTypeTableExists() throws SQLException {
+        final String schema = dbAccess.getSchema();
+        try (Connection connection = dbAccess.getDataSource().getConnection()) {
+            DSLContext dsl = DSL.using(connection);
+            dsl.createTableIfNotExists(DSL.name(schema, DBConstants.TABLENAME_GENERATORTYPE))
+                    .column(DBConstants.TABLEATTR_GENERATORID, org.jooq.impl.SQLDataType.VARCHAR.length(DBConstants.DEFAULTSIZE_VARCHAR).nullable(false))
+                    .column(DBConstants.TABLEATTR_GENERATORTYPE, org.jooq.impl.SQLDataType.VARCHAR.length(DBConstants.DEFAULTSIZE_VARCHAR).nullable(false))
+                    .execute();
+        }
+    }
+
+    private void replaceGeneratorTypeRow(String generatorId, String generatorType) throws SQLException {
+        final String schema = dbAccess.getSchema();
+
+        try (Connection connection = dbAccess.getDataSource().getConnection()) {
+            DSLContext dsl = DSL.using(connection);
+
+            Table<?> table = DSL.table(DSL.name(schema, DBConstants.TABLENAME_GENERATORTYPE));
+            Field<String> fieldGeneratorId = DSL.field(
+                    DSL.name(schema, DBConstants.TABLENAME_GENERATORTYPE, DBConstants.TABLEATTR_GENERATORID),
+                    String.class
+            );
+            Field<String> fieldGeneratorType = DSL.field(
+                    DSL.name(schema, DBConstants.TABLENAME_GENERATORTYPE, DBConstants.TABLEATTR_GENERATORTYPE),
+                    String.class
+            );
+
+            // Keep one authoritative row per generator id even if the table already contains duplicates.
+            dsl.deleteFrom(table)
+                    .where(fieldGeneratorId.eq(generatorId))
+                    .execute();
+
+            dsl.insertInto(table)
+                    .columns(fieldGeneratorId, fieldGeneratorType)
+                    .values(generatorId, generatorType)
+                    .execute();
+        }
     }
 
     public void saveToDB() throws SQLException {
@@ -350,12 +441,16 @@ public class Pipeline {
     }
 
     private static Source decideSourceFromJSONDefinition(String definition, DBAccess dbAccess) throws SQLException, IOException {
-        if (definition.trim().toUpperCase().endsWith(".JSON")) {
-            return new SourceJson(definition);
-        } else if (definition.trim().toUpperCase().endsWith(".JSON@N")) {
-            return new SourceJsonN(definition);
+        String normalizedDefinition = stripNSuffix(definition);
+        if (isDbJsonBackedSource(normalizedDefinition)) {
+            return new SourceJson(normalizedDefinition, dbAccess);
         }
-        return new SourceUIMA(definition, dbAccess);
+        return new SourceUIMA(normalizedDefinition, dbAccess);
+    }
+
+    public static String stripNSuffix(String value) {
+        if (value == null) return null;
+        return value.trim();
     }
 
     private static String getJSONViewOptionalString(JSONView view, String name) {
@@ -381,18 +476,32 @@ public class Pipeline {
 
         // Build a map of sourceId -> createsGenerators list for quick lookup
         Map<String, List<Map<String, Object>>> sourceGeneratorMap = new LinkedHashMap<>();
+        // Track generator IDs already present per source to keep merge idempotent.
+        Map<String, Set<String>> sourceGeneratorIds = new LinkedHashMap<>();
 
         for (Map<String, Object> source : originalSources) {
             Map<String, Object> newSource = new LinkedHashMap<>(source);
-            String sourceId = (String) source.get("id");
+            String sourceId = stripNSuffix((String) source.get("id"));
 
             // Ensure createsGenerators exists; copy existing ones if present
             List<Map<String, Object>> existingGenerators =
                     (List<Map<String, Object>>) source.getOrDefault("createsGenerators", new ArrayList<>());
             List<Map<String, Object>> generatorList = new ArrayList<>(existingGenerators);
 
+            Set<String> existingIds = new LinkedHashSet<>();
+            for (Map<String, Object> existingGenerator : existingGenerators) {
+                Object existingId = existingGenerator.get("id");
+                if (existingId != null) {
+                    String id = existingId.toString().trim();
+                    if (!id.isEmpty()) {
+                        existingIds.add(id);
+                    }
+                }
+            }
+
             newSource.put("createsGenerators", generatorList);
             sourceGeneratorMap.put(sourceId, generatorList);
+            sourceGeneratorIds.put(sourceId, existingIds);
             newSources.add(newSource);
         }
 
@@ -401,12 +510,22 @@ public class Pipeline {
                 (List<Map<String, Object>>) input.getOrDefault("generators", new ArrayList<>());
 
         for (Map<String, Object> generator : standaloneGenerators) {
-            String sourceId = (String) generator.get("source");
+            String sourceId = stripNSuffix((String) generator.get("source"));
 
             List<Map<String, Object>> targetList = sourceGeneratorMap.get(sourceId);
             if (targetList == null) {
                 throw new IllegalArgumentException(
                         "Generator references unknown source id: " + sourceId);
+            }
+
+            Object generatorIdObj = generator.get("id");
+            String generatorId = generatorIdObj == null ? null : generatorIdObj.toString().trim();
+            if (generatorId != null && !generatorId.isEmpty()) {
+                Set<String> seenIds = sourceGeneratorIds.get(sourceId);
+                if (seenIds.contains(generatorId)) {
+                    continue;
+                }
+                seenIds.add(generatorId);
             }
 
             // Copy the generator without the "source" key, as it's now implied by nesting
@@ -420,5 +539,119 @@ public class Pipeline {
         result.remove("generators");
 
         return result;
+    }
+
+    @SuppressWarnings("unchecked")
+    private static Map<String, Object> expandNTemplates(Map<String, Object> input, DBAccess dbAccess) throws SQLException, IOException {
+        Map<String, Object> result = new LinkedHashMap<>(input);
+        List<Map<String, Object>> originalSources = (List<Map<String, Object>>) input.get("sources");
+        if (originalSources == null) {
+            return result;
+        }
+
+        List<Map<String, Object>> expandedSources = new ArrayList<>();
+        Set<String> globalGeneratorIds = new LinkedHashSet<>();
+
+        for (Map<String, Object> source : originalSources) {
+            Map<String, Object> newSource = new LinkedHashMap<>(source);
+            String sourceDefinition = (String) source.get("uri");
+            Source sourceObj = sourceDefinition == null ? null : decideSourceFromJSONDefinition(sourceDefinition, dbAccess);
+
+            List<Map<String, Object>> originalGenerators =
+                    (List<Map<String, Object>>) source.getOrDefault("createsGenerators", new ArrayList<>());
+            List<Map<String, Object>> expandedGenerators = new ArrayList<>();
+
+            for (Map<String, Object> generator : originalGenerators) {
+                boolean generatorGroup = booleanOrDefault(generator.get("generatorGroup"), false);
+
+                if (!generatorGroup) {
+                    Map<String, Object> copy = new LinkedHashMap<>(generator);
+                    String existingId = stringOrNull(copy.get("id"));
+                    if (existingId != null && !existingId.isBlank()) {
+                        globalGeneratorIds.add(existingId.trim());
+                    }
+                    expandedGenerators.add(copy);
+                    continue;
+                }
+
+                SourceN sourceN;
+                if (sourceObj instanceof SourceN sN) {
+                    sourceN = sN;
+                } else if (sourceDefinition != null && isDbJsonBackedSource(stripNSuffix(sourceDefinition))) {
+                    sourceObj = new SourceJsonN(stripNSuffix(sourceDefinition), dbAccess);
+                    sourceN = (SourceN) sourceObj;
+                } else {
+                    String generatorId = stringOrNull(generator.get("id"));
+                    throw new IllegalArgumentException("Generator \"" + generatorId + "\" is grouped but source does not support grouped expansion.");
+                }
+
+                String normalizedType = stringOrNull(generator.get("type"));
+                String idTemplate = stringOrNull(generator.get("id"));
+
+                int fallbackIndex = 0;
+                for (Map.Entry<String, Source> subSourceEntry : sourceN.getSubSourcesIdToObjectMap().entrySet()) {
+                    String subSourceId = subSourceEntry.getKey();
+                    String resolvedId = resolveExpandedGeneratorId(idTemplate, subSourceId, globalGeneratorIds, fallbackIndex);
+                    while (globalGeneratorIds.contains(resolvedId)) {
+                        fallbackIndex++;
+                        resolvedId = resolveExpandedGeneratorId(idTemplate, Integer.toString(fallbackIndex), globalGeneratorIds, fallbackIndex);
+                    }
+                    globalGeneratorIds.add(resolvedId);
+                    fallbackIndex++;
+
+                    Map<String, Object> expandedGenerator = new LinkedHashMap<>(generator);
+                    expandedGenerator.put("type", normalizedType);
+                    expandedGenerator.put("id", resolvedId);
+                    expandedGenerator.remove("source");
+                    expandedGenerator.put("__udavSubSourceId", subSourceId);
+                    expandedGenerators.add(expandedGenerator);
+                }
+            }
+
+            newSource.put("createsGenerators", expandedGenerators);
+            expandedSources.add(newSource);
+        }
+
+        result.put("sources", expandedSources);
+        return result;
+    }
+
+    private static String resolveExpandedGeneratorId(String idTemplate, String subSourceId, Set<String> usedIds, int fallbackIndex) {
+        String safeSubSourceId = (subSourceId == null || subSourceId.isBlank()) ? Integer.toString(fallbackIndex) : subSourceId;
+        String baseId = (idTemplate == null || idTemplate.isBlank()) ? "Generator" : idTemplate.trim();
+        String candidate = baseId.contains("@ID@") ? baseId.replace("@ID@", safeSubSourceId) : baseId + "_" + safeSubSourceId;
+        if (!usedIds.contains(candidate)) {
+            return candidate;
+        }
+
+        int suffix = 0;
+        String withFallback;
+        do {
+            withFallback = baseId.contains("@ID@")
+                    ? baseId.replace("@ID@", Integer.toString(suffix))
+                    : baseId + "_" + suffix;
+            suffix++;
+        } while (usedIds.contains(withFallback));
+        return withFallback;
+    }
+
+    private static String stringOrNull(Object value) {
+        if (value == null) return null;
+        String stringValue = value.toString().trim();
+        return stringValue.isEmpty() ? null : stringValue;
+    }
+
+    private static boolean booleanOrDefault(Object value, boolean defaultValue) {
+        if (value == null) return defaultValue;
+        if (value instanceof Boolean b) return b;
+        String text = value.toString().trim();
+        if (text.isEmpty()) return defaultValue;
+        return Boolean.parseBoolean(text);
+    }
+
+    private static boolean isDbJsonBackedSource(String definition) {
+        if (definition == null) return false;
+        String normalized = definition.trim().toUpperCase();
+        return normalized.endsWith(".JSON") || normalized.endsWith(".XML");
     }
 }
